tarot_juicer/static/css/tarot_key.css
/* ... */
.nav_button i{
  display: block;
  font-size: 2rem;
}

.nav_button:hover {
  box-shadow: 0 0 10px 0 crimson inset, 0 0 10px 4px crimson;
}
@media (min-width: 700px){
section.general {
  text-align: left;
  border: 1px solid transparent;
  padding: 0.5em;
  margin-bottom: 1em;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin-left: 20%;
}
}

/*  ##Device = Desktops
  ##Screen = 1281px to higher resolution desktops */
@media (min-width: 1281px) {
  section.general img {
    width: 21%;
  }
}

/* ##Device = Laptops, Desktops
    ##Screen = B/w 1025px to 1280px */

@media (min-width: 1025px) and (max-width: 1280px) {
}

/* ##Device = Tablets, Ipads (portrait)
    ##Screen = B/w 768px to 1024px */

@media (min-width: 768px) and (max-width: 1024px) {
}

/*  ##Device = Tablets, Ipads (landscape)
    ##Screen = B/w 768px to 1024px */
@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
}


/* ##Device = Low Resolution Tablets, Mobiles (Landscape)
    ##Screen = B/w 481px to 767px */
@media (min-width: 410px) and (max-width: 767px) {
  section.general img {
    width: 43%;
  }
  .flex-item {
    max-width: 100px;
  }
  #centered-buttons {
   
  }
  .nav_button{
  border-color: crimson;
  color: white;
  }
  .third{
  border-color: crimson;
  color: white;
  }
}
@media (min-width: 200px) and (max-width: 767px) {
  .gradient_background {
    background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);
    background-attachment: fixed;
    color: white;
  }
}

/* ##Device = Most of the Smartphones Mobiles (Portrait)
    ##Screen = B/w 320px to 479px */
@media (min-width: 320px) and (max-width: 480px) {
  section.general img {
    width: 70%;
  }
  .flex-item {
    max-width: 100px;
  }
}



#biblio-key {
  font-size: 2em;
  margin-top: 40px;
  margin-bottom: 27px;
  padding: 0.25em 0.5em;
  text-align: center;
  color: white;
  /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
  /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    /* 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff; /* 0 0 20px #fff, 0 0 30px #fff;*/
   /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;*/
  }

  h2 {
    font-size: 200;
    margin-top: 40px;
    margin-bottom: 27px;
    padding: 0.25em 0.5em;
    text-align: center;
    color: crimson;
    /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
  }

  .num {
    margin: 0 auto;
  }

